--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,13 @@
     <title>Titulo del post</title>
 </head>
 <body>
-    <h1>Aqui vamos a hacer un blog</h1>
-    <p>Y este es el parrafo de inicio</p>
+    <div id="container">
+    <div id="posts">
+        <h1>Este es el titulo interesante y atrativo del post</h1>
+        <p>Y este es el parrafo de inicio donde vamos a explicar
+            las cosas increibles que se pueden hacer con las ramas
+        </p>
+    </div>
+</div>
 </body>
 </html>
