--- a/blogpost.html
+++ b/blogpost.html
@@ -10,7 +10,8 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            Cabecera
+            Hyperblog
+            <span id="tagline"> Tu blog de confianza</span>
         </div>
     <div id="posts">
         <h1>Este es el titulo interesante y atrativo del post</h1>
