--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline"> Tu blog de confianza</span>
+            <span id="tagline"> Tu blog Master</span>
         </div>
     <div id="posts">
         <h1>Este es el titulo interesante y atrativo del post</h1>
@@ -22,6 +22,7 @@
             más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
             Pero estadisticamente no lo eres...por ahora.
         </p>
+        <p>Suscribete y Dale Like</p>
     </div>
 </div>
 </body>
