--- a/blogpost.html
+++ b/blogpost.html
@@ -17,10 +17,10 @@
     <div id="posts">
         <h1>Este es el titulo interesante y atrativo del post</h1>
         <p>Y este es el parrafo de inicio donde vamos a explicar
-            las cosas increibles que se pueden hacer con las ramas
+            las cosas increibles que se pueden hacer con las ramas.
         </p>
         <p>Los blogs son la forma de compartir informacion y tus ideas. Mucho
-            más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
+            más que ir a conferencias o salir en Youtube, excepto si eres un rockstar,
             Pero estadisticamente no lo eres...por ahora.
         </p>
         <p>Suscribete y Dale Like</p>
