Agregue una imagen al Blog

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css"/>
+    <link rel="stylesheet" href="css/estilos.css" />
     <title>Bienvenidos a Hyperblog 2.0</title>
 </head>
+
 <body>
     <div id="container">
         <div id="cabecera">
-            <img id="logo" src="Imagenes/dragon.png"/>
+            <img id="logo" src="Imagenes/dragon.png" />
             Hyperblog
             <span id="tagline"> Tu blog de Cabecera</span>
         </div>
-    <div id="posts">
-        <h1>Este es el t&iacute;tulo interesante y atrativo del post</h1>
-        <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar
-            las cosas incre&iacute;bles que se pueden hacer con las ramas.
-        </p>
-        <p>Los blogs son la forma de compartir informaci&oacute;n y tus ideas. Mucho
-            m&aacute;s que ir a conferencias o salir en Youtube, excepto si eres un rockstar,
-            Pero estad&iacute;sticamente no lo eres...por ahora.
-        </p>
-        <p>Suscribete y Dale Like</p>
+        <div id="posts">
+            <h1>Este es el t&iacute;tulo interesante y atrativo del post</h1>
+            <p>Y este es el p&aacute;rrafo de inicio donde vamos a explicar
+                las cosas incre&iacute;bles que se pueden hacer con las ramas.
+            </p>
+            <p><img src="Imagenes/ardillas.png" width="100%"></p>
+            <p>Los blogs son la forma de compartir informaci&oacute;n y tus ideas. Mucho
+                m&aacute;s que ir a conferencias o salir en Youtube, excepto si eres un rockstar,
+                Pero estad&iacute;sticamente no lo eres...por ahora.
+            </p>
+            <p>Suscribete y Dale Like</p>
+        </div>
+        <div id="footer">
+            Hecho con Amor en platzi
+        </div>
     </div>
-<div id="footer">
-    Hecho con Amor en platzi
-</div>
-</div>
 </body>
-</html>
 
+</html>
 
