--- a/blogpost.html
+++ b/blogpost.html
@@ -22,6 +22,7 @@
                 las cosas incre&iacute;bles que se pueden hacer con las ramas.
             </p>
             <p><img src="Imagenes/ardillas.png" width="100%"></p>
+            <p><a href="https://imgur.com/P0uCD21"><img src="https://i.imgur.com/WZBB97T.png"width="100%"title="Hey, walk right there" /></a></p>
             <p>Los blogs son la forma de compartir informaci&oacute;n y tus ideas. Mucho
                 m&aacute;s que ir a conferencias o salir en Youtube, excepto si eres un rockstar,
                 Pero estad&iacute;sticamente no lo eres...por ahora.
