Cambio al tagline y color del footer :)

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
         <div id="cabecera">
             <img id="logo" src="Imagenes/dragon.png" />
             Hyperblog
-            <span id="tagline"> Tu blog de Cabecera</span>
+            <span id="tagline"> Tu blog de confianza</span>
         </div>
         <div id="posts">
             <h1>Este es el t&iacute;tulo interesante y atrativo del post</h1>
